Investigating java heap errors on selenium tests
fix unit tests

DTM-2388